# modern_lexmae

./: bert_reference.py  data.py  general_train.py  modern_lexmae.py  pyproject.toml  reference_train.py  setup_env.sh  train.py  utils.py
conf/: bert.yaml  modernbert.yaml  mosaic.yaml
eval/: st_wrapper.py  validate.py
src/presplade/: bert_lexmae.py  lexmae_base.py  mosaic_lexmae.py  utils.py
